# evict

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml  cicd.yml  release.yml
src/: cli.rs  main.rs  port_service.rs  process_service.rs  validation.rs
tests/: integration_test.rs
