[package]
name = "evict"
version = "1.0.2"
edition = "2024"

[lints.clippy]
panic = "deny"
unwrap_used = "deny"
expect_used = "deny"
indexing_slicing = "deny"

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1

[dependencies]
windows = { version = "0.62.2", features = [
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_NetworkManagement_IpHelper",
    "Win32_Networking_WinSock",
] }

[dev-dependencies]
proptest = "1.4"
